logs/mobility/build.make.126.log.stderr
/home/steven/rover_workspace/src/mobility/src/mobility.cpp: In function ‘void doDropOffControllerMovements()’:
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:495:29: error: ‘SCOOTING_CLOSER_TO_BASE’ is not a member of ‘DropOffController’
  dropOffController.setState(DropOffController::SCOOTING_CLOSER_TO_BASE);
                             ^
/home/steven/rover_workspace/src/mobility/src/mobility.cpp:507:7: error: ‘SCOOTING_CLOSER_TO_BASE’ is not a member of ‘DropOffController’
 case (DropOffController::SCOOTING_CLOSER_TO_BASE):
       ^
make[2]: *** [CMakeFiles/mobility.dir/src/mobility.cpp.o] Error 1
make[1]: *** [CMakeFiles/mobility.dir/all] Error 2
make: *** [all] Error 2
